# NotepadR

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
assets/strings/: en.json  es.json  fr.json
src/: app_state.rs  commands.rs  content.rs  main.rs  menu_topbar.rs  navigator.rs  shortcuts.rs
src/screens/: mod.rs  notepad_screen.rs
src/screens/notepad/: commands.rs  menu_topbar.rs  mod.rs  notepad_screen.rs
src/screens/settings/: settings_screen.rs
