[package]
name = "Notepad"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.2", features = ["wgpu"] }

egui_extras = { version = "0.32.2", features = ["default", "image"] }

env_logger = { version = "0.11.8", default-features = false, features = [
    "auto-color",
    "humantime",
] }